# liburing

./: .gitignore  CMakeLists.txt  LICENSE  dev.yaml
cmake/: Configure.cmake  Install.cmake  Option.cmake
cmake/templates/: Config.cmake.in  Uninstall.cmake.in  liburing.pc.in
example/: 1.cc  CMakeLists.txt  cat.cc  cp.cc  test.cc
include/uring/: compat.h.in  cq.h  cqe.h  int_flags.h  lib.h  params.h  sq.h  sqe.h  syscall.h  uring.h
